--- a/index.html
+++ b/index.html
@@ -6,38 +6,41 @@
 <style>
 body {
   margin:0;
-  background:#0b0b0b;
   overflow:hidden;
-  font-family: Arial, sans-serif;
+  background:#111;
+  color:white;
+  font-family:Arial, sans-serif;
 }
-canvas { display:none; }
 
-/* MAIN MENU */
-#menu {
+canvas {
+  display:block;
+  margin:auto;
+  background:#1a1a1a;
+}
+
+/* HUD */
+#hud {
   position:fixed;
-  inset:0;
-  background:radial-gradient(circle, #111, #000);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  color:white;
-  z-index:10;
+  top:10px;
+  left:10px;
+  font-size:16px;
 }
-#menu h1 {
-  font-size:72px;
-  letter-spacing:4px;
-}
-.menu-btn {
-  padding:15px 40px;
-  margin:10px;
-  font-size:20px;
-  background:#222;
+
+#healthBar {
+  position:fixed;
+  bottom:20px;
+  left:50%;
+  transform:translateX(-50%);
+  width:300px;
+  height:20px;
   border:2px solid white;
-  color:white;
-  cursor:pointer;
 }
-.menu-btn:hover { background:#444; }
+
+#healthFill {
+  height:100%;
+  width:100%;
+  background:red;
+}
 
 /* SHOP */
 #shop {
@@ -45,204 +48,204 @@ canvas { display:none; }
   inset:0;
   background:rgba(0,0,0,.9);
   display:none;
-  color:white;
   text-align:center;
 }
-#shop h2 { margin-top:60px; }
 
 .perks {
   display:flex;
   justify-content:center;
-  gap:20px;
-  margin-top:40px;
+  gap:30px;
+  margin-top:60px;
 }
-.perk {
-  width:200px;
-  padding:20px;
-  border:2px solid white;
-  background:#111;
-  cursor:pointer;
-}
-.perk:hover { background:#222; }
 
-/* SETTINGS */
-#settings {
-  position:fixed;
-  inset:0;
-  background:#000;
-  color:white;
+.perk {
+  position:relative;
+  width:220px;
+  height:260px;
+  border:6px solid black;
+  cursor:pointer;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  font-weight:bold;
+  transition:.15s;
+}
+
+.perk:hover { transform:translateY(-6px); }
+
+.strength { background:#c96a1b; }
+.firerate { background:#1b5fc9; }
+.regen { background:#c91b1b; }
+
+.perk.selected {
+  outline:5px solid yellow;
+  box-shadow:0 0 30px yellow;
+}
+
+.icon { font-size:48px; margin-bottom:15px; }
+.perk-text { font-size:18px; }
+
+.stack {
+  position:absolute;
+  top:10px;
+  right:10px;
+  background:black;
+  color:yellow;
+  padding:4px 8px;
   display:none;
-  text-align:center;
-  padding-top:100px;
+}
+
+.perk::after {
+  content: attr(data-desc);
+  position:absolute;
+  bottom:-45px;
+  left:50%;
+  transform:translateX(-50%);
+  background:black;
+  padding:6px 10px;
+  font-size:14px;
+  opacity:0;
+  transition:.15s;
+  white-space:nowrap;
+}
+
+.perk:hover::after { opacity:1; }
+
+.menu-btn {
+  margin-top:40px;
+  padding:10px 25px;
+  font-size:18px;
 }
 </style>
 </head>
+
 <body>
+<canvas id="game" width="900" height="600"></canvas>
 
-<div id="menu">
-  <h1>DEADWAVE</h1>
-  <p>Click anywhere to start</p>
-  <button class="menu-btn" onclick="startGame()">Play</button>
-  <button class="menu-btn" onclick="openSettings()">Settings</button>
+<div id="hud">
+  Wave: <span id="wave">1</span><br>
+  Kills: <span id="kills">0</span>
 </div>
 
-<div id="settings">
-  <h2>Settings</h2>
-  <p>Music Volume</p>
-  <input type="range" min="0" max="1" step="0.01" value="0.5" oninput="bgm.volume=this.value">
-  <br><br>
-  <button class="menu-btn" onclick="closeSettings()">Back</button>
-</div>
+<div id="healthBar"><div id="healthFill"></div></div>
 
 <div id="shop">
-  <h2>Choose a Perk</h2>
+  <h2>CHOOSE A PERK</h2>
   <div class="perks">
-    <div class="perk" onclick="perk('damage')">+1 Damage</div>
-    <div class="perk" onclick="perk('regen')">Faster Regen</div>
-    <div class="perk" onclick="perk('firerate')">Faster Fire Rate</div>
+    <div class="perk strength" onclick="selectPerk(this,'damage')" data-desc="+1 damage per stack">
+      <div class="icon">💪</div>
+      <div class="perk-text">STRENGTH</div>
+      <div class="stack" id="stack-damage"></div>
+    </div>
+    <div class="perk firerate" onclick="selectPerk(this,'firerate')" data-desc="Shoot faster">
+      <div class="icon">🔫</div>
+      <div class="perk-text">FIRE RATE</div>
+      <div class="stack" id="stack-firerate"></div>
+    </div>
+    <div class="perk regen" onclick="selectPerk(this,'regen')" data-desc="Faster health regen">
+      <div class="icon">❤️</div>
+      <div class="perk-text">REGEN</div>
+      <div class="stack" id="stack-regen"></div>
+    </div>
   </div>
-  <br><br>
-  <button class="menu-btn" onclick="nextWave()">Continue</button>
+  <button class="menu-btn" id="continueBtn" onclick="applyPerk()" disabled>Continue</button>
 </div>
-
-<canvas id="game"></canvas>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
-canvas.width = innerWidth;
-canvas.height = innerHeight;
 
-// MUSIC
-const bgm = new Audio("https://cdn.pixabay.com/download/audio/2022/10/25/audio_6b7b2d90b4.mp3");
-bgm.loop = true;
-bgm.volume = 0.5;
+let player = { x:450, y:300, r:15, hp:100, maxHp:100 };
+let bullets = [];
+let zombies = [];
+let wave = 1;
+let kills = 0;
+let lastShot = 0;
+let shootCooldown = 500;
+let damage = 1;
+let regenBonus = 0;
+let lastHit = 0;
+let inShop = false;
+let selectedPerk = null;
 
-// GAME STATE
-const player = {
-  x: canvas.width/2,
-  y: canvas.height/2,
-  r: 18,
-  health: 100,
-  maxHealth: 100,
-  speed: 4,
-  lastHit: 0
-};
+let perkStacks = { damage:0, firerate:0, regen:0 };
 
-let bullets=[], zombies=[], keys={}, mouse={x:0,y:0};
-let wave=1, kills=0, damage=1, regenBonus=0;
-let shootCooldown=500, lastShot=0, inShop=false;
-const mapPadding = 60;
+const mouse = { x:0, y:0 };
 
-// INPUT
-addEventListener("keydown",e=>keys[e.key.toLowerCase()]=true);
-addEventListener("keyup",e=>keys[e.key.toLowerCase()]=false);
-addEventListener("mousemove",e=>{mouse.x=e.clientX;mouse.y=e.clientY});
-addEventListener("mousedown",shoot);
+canvas.addEventListener("mousemove", e => {
+  const r = canvas.getBoundingClientRect();
+  mouse.x = e.clientX - r.left;
+  mouse.y = e.clientY - r.top;
+});
 
-// MENU
-function startGame(){
-  document.getElementById("menu").style.display="none";
-  canvas.style.display="block";
-  bgm.play();
-  spawnWave();
-  update();
-}
-function openSettings(){
-  document.getElementById("menu").style.display="none";
-  document.getElementById("settings").style.display="block";
-}
-function closeSettings(){
-  document.getElementById("settings").style.display="none";
-  document.getElementById("menu").style.display="flex";
-}
+canvas.addEventListener("mousedown", () => {
+  if (Date.now() - lastShot > shootCooldown && !inShop) {
+    lastShot = Date.now();
+    bullets.push({
+      x:player.x,
+      y:player.y,
+      dx:(mouse.x-player.x)/10,
+      dy:(mouse.y-player.y)/10
+    });
+  }
+});
 
-// SHOOT
-function shoot(){
-  if(inShop || Date.now()-lastShot<shootCooldown) return;
-  lastShot=Date.now();
-  const a=Math.atan2(mouse.y-player.y,mouse.x-player.x);
-  bullets.push({x:player.x,y:player.y,dx:Math.cos(a)*10,dy:Math.sin(a)*10});
-}
-
-// ZOMBIES
-function spawnZombie(type){
-  let z={x:Math.random()*canvas.width,y:Math.random()*canvas.height};
-  if(type==="fast"){z.r=15;z.speed=3;z.health=2;}
-  else if(type==="tank"){z.r=28;z.speed=1;z.health=6+wave;}
-  else if(type==="boss"){z.r=40;z.speed=1+wave*.05;z.health=15+wave*2;z.boss=true;}
-  else {z.r=20;z.speed=1.5;z.health=3;}
-  z.maxHealth=z.health;
-  zombies.push(z);
-}
-function spawnWave(){
+function spawnWave() {
   zombies=[];
-  for(let i=0;i<wave*2;i++){
-    spawnZombie(Math.random()<.2?"fast":Math.random()<.35?"tank":"normal");
+  const count = wave*3;
+  const boss = wave % 10 === 0;
+
+  for(let i=0;i<count;i++){
+    zombies.push({
+      x:Math.random()*900,
+      y:Math.random()*600,
+      hp: boss ? 150 : 30,
+      max: boss ? 150 : 30,
+      speed: boss ? 0.6 : 1
+    });
   }
-  if(wave%10===0) spawnZombie("boss");
 }
 
-// SHOP
-function perk(p){
-  if(p==="damage") damage++;
-  if(p==="regen") regenBonus+=0.05;
-  if(p==="firerate" && shootCooldown>200) shootCooldown-=50;
-}
-function nextWave(){
-  inShop=false;
-  document.getElementById("shop").style.display="none";
-  wave++;
-  spawnWave();
-}
+function update() {
+  ctx.clearRect(0,0,900,600);
 
-// GAME LOOP
-function update(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  // MAP GRID
-  ctx.strokeStyle="#1a1a1a";
-  for(let i=0;i<canvas.width;i+=60){
-    ctx.beginPath(); ctx.moveTo(i,0); ctx.lineTo(i,canvas.height); ctx.stroke();
-  }
-  for(let i=0;i<canvas.height;i+=60){
-    ctx.beginPath(); ctx.moveTo(0,i); ctx.lineTo(canvas.width,i); ctx.stroke();
+  if(Date.now()-lastHit>3000 && player.hp<player.maxHp){
+    player.hp += 0.05 + regenBonus;
   }
 
-  // MOVEMENT + BARRIERS
-  if(keys.w) player.y-=player.speed;
-  if(keys.s) player.y+=player.speed;
-  if(keys.a) player.x-=player.speed;
-  if(keys.d) player.x+=player.speed;
-
-  player.x=Math.max(mapPadding,Math.min(canvas.width-mapPadding,player.x));
-  player.y=Math.max(mapPadding,Math.min(canvas.height-mapPadding,player.y));
-
-  // PLAYER
-  ctx.fillStyle="#d2b48c";
-  ctx.beginPath();
-  ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
-  ctx.fill();
-
-  // GUN
-  const a=Math.atan2(mouse.y-player.y,mouse.x-player.x);
-  ctx.strokeStyle="#000";
-  ctx.lineWidth=5;
-  ctx.beginPath();
-  ctx.moveTo(player.x,player.y);
-  ctx.lineTo(player.x+Math.cos(a)*30,player.y+Math.sin(a)*30);
-  ctx.stroke();
-
-  // BULLETS
-  bullets.forEach((b,i)=>{
+  bullets.forEach(b=>{
     b.x+=b.dx; b.y+=b.dy;
-    ctx.fillStyle="#fff";
+    ctx.fillStyle="yellow";
     ctx.fillRect(b.x,b.y,4,4);
+  });
+
+  zombies.forEach(z=>{
+    const dx=player.x-z.x, dy=player.y-z.y;
+    const d=Math.hypot(dx,dy);
+    z.x+=dx/d*z.speed;
+    z.y+=dy/d*z.speed;
+
+    if(d<20){
+      player.hp-=10;
+      lastHit=Date.now();
+    }
+
+    ctx.fillStyle="green";
+    ctx.beginPath();
+    ctx.arc(z.x,z.y,15,0,Math.PI*2);
+    ctx.fill();
+
+    ctx.fillStyle="red";
+    ctx.fillRect(z.x-15,z.y-20,30*(z.hp/z.max),4);
+  });
+
+  bullets.forEach((b,bi)=>{
     zombies.forEach((z,zi)=>{
-      if(Math.hypot(b.x-z.x,b.y-z.y)<z.r){
-        z.health-=damage;
-        bullets.splice(i,1);
-        if(z.health<=0){
+      if(Math.hypot(b.x-z.x,b.y-z.y)<15){
+        z.hp-=damage;
+        bullets.splice(bi,1);
+        if(z.hp<=0){
           zombies.splice(zi,1);
           kills++;
         }
@@ -250,45 +253,15 @@ function update(){
     });
   });
 
-  // ZOMBIES
-  zombies.forEach(z=>{
-    const a=Math.atan2(player.y-z.y,player.x-z.x);
-    z.x+=Math.cos(a)*z.speed;
-    z.y+=Math.sin(a)*z.speed;
+  ctx.fillStyle="tan";
+  ctx.beginPath();
+  ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
+  ctx.fill();
 
-    if(Math.hypot(player.x-z.x,player.y-z.y)<player.r+z.r){
-      if(Date.now()-player.lastHit>800){
-        player.health-=10;
-        player.lastHit=Date.now();
-      }
-    }
-
-    ctx.fillStyle=z.boss?"#8b0000":z.r<18?"#00ff00":"#228b22";
-    ctx.beginPath();
-    ctx.arc(z.x,z.y,z.r,0,Math.PI*2);
-    ctx.fill();
-
-    ctx.fillStyle="red";
-    ctx.fillRect(z.x-20,z.y-z.r-10,40,5);
-    ctx.fillStyle="lime";
-    ctx.fillRect(z.x-20,z.y-z.r-10,40*(z.health/z.maxHealth),5);
-  });
-
-  // REGEN
-  if(Date.now()-player.lastHit>3000 && player.health<player.maxHealth){
-    player.health+=0.1+regenBonus;
-  }
-
-  // UI
-  ctx.fillStyle="white";
-  ctx.font="20px Arial";
-  ctx.fillText("Wave: "+wave,canvas.width-120,30);
-  ctx.fillText("Kills: "+kills,20,30);
-
-  ctx.fillStyle="red";
-  ctx.fillRect(canvas.width/2-100,canvas.height-40,200,15);
-  ctx.fillStyle="lime";
-  ctx.fillRect(canvas.width/2-100,canvas.height-40,200*(player.health/player.maxHealth),15);
+  document.getElementById("healthFill").style.width =
+    (player.hp/player.maxHp*100)+"%";
+  document.getElementById("wave").textContent = wave;
+  document.getElementById("kills").textContent = kills;
 
   if(zombies.length===0 && !inShop){
     inShop=true;
@@ -297,6 +270,40 @@ function update(){
 
   requestAnimationFrame(update);
 }
+
+function selectPerk(el,p){
+  document.querySelectorAll(".perk").forEach(x=>x.classList.remove("selected"));
+  el.classList.add("selected");
+  selectedPerk=p;
+  document.getElementById("continueBtn").disabled=false;
+}
+
+function applyPerk(){
+  perkStacks[selectedPerk]++;
+  if(selectedPerk==="damage") damage++;
+  if(selectedPerk==="regen") regenBonus+=0.05;
+  if(selectedPerk==="firerate" && shootCooldown>150) shootCooldown-=50;
+  updateStacks();
+  selectedPerk=null;
+  inShop=false;
+  document.getElementById("shop").style.display="none";
+  document.getElementById("continueBtn").disabled=true;
+  wave++;
+  spawnWave();
+}
+
+function updateStacks(){
+  for(let p in perkStacks){
+    const el=document.getElementById("stack-"+p);
+    if(perkStacks[p]>0){
+      el.textContent="x"+perkStacks[p];
+      el.style.display="block";
+    }
+  }
+}
+
+spawnWave();
+update();
 </script>
 </body>
 </html>
