--- a/index.html
+++ b/index.html
@@ -1,302 +1,240 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Deadwave</title>
+<title>Top Down Zombie Shooter</title>
 <style>
-body {
-  margin:0;
-  background:#0b0b0b;
-  overflow:hidden;
-  font-family: Arial, sans-serif;
-}
-canvas { display:none; }
-
-/* MAIN MENU */
-#menu {
-  position:fixed;
-  inset:0;
-  background:radial-gradient(circle, #111, #000);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  color:white;
-  z-index:10;
-}
-#menu h1 {
-  font-size:72px;
-  letter-spacing:4px;
-}
-.menu-btn {
-  padding:15px 40px;
-  margin:10px;
-  font-size:20px;
-  background:#222;
-  border:2px solid white;
-  color:white;
-  cursor:pointer;
-}
-.menu-btn:hover { background:#444; }
-
-/* SHOP */
-#shop {
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.9);
-  display:none;
-  color:white;
-  text-align:center;
-}
-#shop h2 { margin-top:60px; }
-
-.perks {
-  display:flex;
-  justify-content:center;
-  gap:20px;
-  margin-top:40px;
-}
-.perk {
-  width:200px;
-  padding:20px;
-  border:2px solid white;
-  background:#111;
-  cursor:pointer;
-}
-.perk:hover { background:#222; }
-
-/* SETTINGS */
-#settings {
-  position:fixed;
-  inset:0;
-  background:#000;
-  color:white;
-  display:none;
-  text-align:center;
-  padding-top:100px;
-}
+  body {
+    margin: 0;
+    background: #111;
+    overflow: hidden;
+  }
+  canvas {
+    display: block;
+    margin: auto;
+    background: #222;
+  }
 </style>
 </head>
 <body>
 
-<div id="menu">
-  <h1>DEADWAVE</h1>
-  <p>Click anywhere to start</p>
-  <button class="menu-btn" onclick="startGame()">Play</button>
-  <button class="menu-btn" onclick="openSettings()">Settings</button>
-</div>
-
-<div id="settings">
-  <h2>Settings</h2>
-  <p>Music Volume</p>
-  <input type="range" min="0" max="1" step="0.01" value="0.5" oninput="bgm.volume=this.value">
-  <br><br>
-  <button class="menu-btn" onclick="closeSettings()">Back</button>
-</div>
-
-<div id="shop">
-  <h2>Choose a Perk</h2>
-  <div class="perks">
-    <div class="perk" onclick="perk('damage')">+1 Damage</div>
-    <div class="perk" onclick="perk('regen')">Faster Regen</div>
-    <div class="perk" onclick="perk('firerate')">Faster Fire Rate</div>
-  </div>
-  <br><br>
-  <button class="menu-btn" onclick="nextWave()">Continue</button>
-</div>
-
-<canvas id="game"></canvas>
+<canvas id="game" width="800" height="600"></canvas>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
-canvas.width = innerWidth;
-canvas.height = innerHeight;
 
-// MUSIC
-const bgm = new Audio("https://cdn.pixabay.com/download/audio/2022/10/25/audio_6b7b2d90b4.mp3");
-bgm.loop = true;
-bgm.volume = 0.5;
-
-// GAME STATE
+// ---------------- PLAYER ----------------
 const player = {
-  x: canvas.width/2,
-  y: canvas.height/2,
-  r: 18,
-  health: 100,
+  x: 400,
+  y: 300,
+  radius: 15,
+  speed: 3,
   maxHealth: 100,
-  speed: 4,
+  health: 100,
+  regenDelay: 3000,
   lastHit: 0
 };
 
-let bullets=[], zombies=[], keys={}, mouse={x:0,y:0};
-let wave=1, kills=0, damage=1, regenBonus=0;
-let shootCooldown=500, lastShot=0, inShop=false;
-const mapPadding = 60;
+// ---------------- GAME STATE ----------------
+let bullets = [];
+let zombies = [];
+let keys = {};
+let mouse = { x: 0, y: 0 };
+let fireRate = 300;
+let lastShot = 0;
+let wave = 1;
 
-// INPUT
-addEventListener("keydown",e=>keys[e.key.toLowerCase()]=true);
-addEventListener("keyup",e=>keys[e.key.toLowerCase()]=false);
-addEventListener("mousemove",e=>{mouse.x=e.clientX;mouse.y=e.clientY});
-addEventListener("mousedown",shoot);
-
-// MENU
-function startGame(){
-  document.getElementById("menu").style.display="none";
-  canvas.style.display="block";
-  bgm.play();
-  spawnWave();
-  update();
-}
-function openSettings(){
-  document.getElementById("menu").style.display="none";
-  document.getElementById("settings").style.display="block";
-}
-function closeSettings(){
-  document.getElementById("settings").style.display="none";
-  document.getElementById("menu").style.display="flex";
-}
-
-// SHOOT
-function shoot(){
-  if(inShop || Date.now()-lastShot<shootCooldown) return;
-  lastShot=Date.now();
-  const a=Math.atan2(mouse.y-player.y,mouse.x-player.x);
-  bullets.push({x:player.x,y:player.y,dx:Math.cos(a)*10,dy:Math.sin(a)*10});
-}
-
-// ZOMBIES
-function spawnZombie(type){
-  let z={x:Math.random()*canvas.width,y:Math.random()*canvas.height};
-  if(type==="fast"){z.r=15;z.speed=3;z.health=2;}
-  else if(type==="tank"){z.r=28;z.speed=1;z.health=6+wave;}
-  else if(type==="boss"){z.r=40;z.speed=1+wave*.05;z.health=15+wave*2;z.boss=true;}
-  else {z.r=20;z.speed=1.5;z.health=3;}
-  z.maxHealth=z.health;
-  zombies.push(z);
-}
-function spawnWave(){
-  zombies=[];
-  for(let i=0;i<wave*2;i++){
-    spawnZombie(Math.random()<.2?"fast":Math.random()<.35?"tank":"normal");
+// ---------------- PERKS (MERGED) ----------------
+const perks = [
+  {
+    id: "faster_fire",
+    apply() {
+      fireRate *= 0.85;
+    }
+  },
+  {
+    id: "faster_regen",
+    apply() {
+      player.regenDelay *= 0.7;
+    }
+  },
+  {
+    id: "more_health",
+    apply() {
+      player.maxHealth += 25;
+      player.health += 25;
+    }
+  },
+  {
+    id: "more_speed",
+    apply() {
+      player.speed *= 1.15;
+    }
   }
-  if(wave%10===0) spawnZombie("boss");
+];
+
+function applyRandomPerk() {
+  const perk = perks[Math.floor(Math.random() * perks.length)];
+  perk.apply();
 }
 
-// SHOP
-function perk(p){
-  if(p==="damage") damage++;
-  if(p==="regen") regenBonus+=0.05;
-  if(p==="firerate" && shootCooldown>200) shootCooldown-=50;
-}
-function nextWave(){
-  inShop=false;
-  document.getElementById("shop").style.display="none";
-  wave++;
-  spawnWave();
+// ---------------- INPUT ----------------
+window.addEventListener("keydown", e => keys[e.key] = true);
+window.addEventListener("keyup", e => keys[e.key] = false);
+
+canvas.addEventListener("mousemove", e => {
+  const rect = canvas.getBoundingClientRect();
+  mouse.x = e.clientX - rect.left;
+  mouse.y = e.clientY - rect.top;
+});
+
+canvas.addEventListener("mousedown", shoot);
+
+// ---------------- SHOOTING ----------------
+function shoot() {
+  if (Date.now() - lastShot < fireRate) return;
+  lastShot = Date.now();
+
+  const angle = Math.atan2(mouse.y - player.y, mouse.x - player.x);
+  bullets.push({
+    x: player.x,
+    y: player.y,
+    dx: Math.cos(angle) * 7,
+    dy: Math.sin(angle) * 7
+  });
 }
 
-// GAME LOOP
-function update(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  // MAP GRID
-  ctx.strokeStyle="#1a1a1a";
-  for(let i=0;i<canvas.width;i+=60){
-    ctx.beginPath(); ctx.moveTo(i,0); ctx.lineTo(i,canvas.height); ctx.stroke();
+// ---------------- ZOMBIES ----------------
+function spawnWave() {
+  for (let i = 0; i < wave * 3; i++) {
+    zombies.push({
+      x: Math.random() * canvas.width,
+      y: Math.random() * canvas.height,
+      radius: 18,
+      speed: 1 + wave * 0.1,
+      health: 40 + wave * 10
+    });
   }
-  for(let i=0;i<canvas.height;i+=60){
-    ctx.beginPath(); ctx.moveTo(0,i); ctx.lineTo(canvas.width,i); ctx.stroke();
+}
+
+spawnWave();
+
+// ---------------- DAMAGE + REGEN ----------------
+function takeDamage(amount) {
+  player.health -= amount;
+  player.lastHit = Date.now();
+  if (player.health < 0) player.health = 0;
+}
+
+function regenHealth() {
+  if (Date.now() - player.lastHit > player.regenDelay) {
+    player.health += 0.05;
+    if (player.health > player.maxHealth)
+      player.health = player.maxHealth;
   }
+}
 
-  // MOVEMENT + BARRIERS
-  if(keys.w) player.y-=player.speed;
-  if(keys.s) player.y+=player.speed;
-  if(keys.a) player.x-=player.speed;
-  if(keys.d) player.x+=player.speed;
+// ---------------- UPDATE ----------------
+function update() {
+  // Movement
+  let dx = 0, dy = 0;
+  if (keys["w"]) dy--;
+  if (keys["s"]) dy++;
+  if (keys["a"]) dx--;
+  if (keys["d"]) dx++;
 
-  player.x=Math.max(mapPadding,Math.min(canvas.width-mapPadding,player.x));
-  player.y=Math.max(mapPadding,Math.min(canvas.height-mapPadding,player.y));
+  player.x += dx * player.speed;
+  player.y += dy * player.speed;
 
-  // PLAYER
-  ctx.fillStyle="#d2b48c";
-  ctx.beginPath();
-  ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
-  ctx.fill();
+  // Bullets
+  bullets.forEach(b => {
+    b.x += b.dx;
+    b.y += b.dy;
+  });
 
-  // GUN
-  const a=Math.atan2(mouse.y-player.y,mouse.x-player.x);
-  ctx.strokeStyle="#000";
-  ctx.lineWidth=5;
-  ctx.beginPath();
-  ctx.moveTo(player.x,player.y);
-  ctx.lineTo(player.x+Math.cos(a)*30,player.y+Math.sin(a)*30);
-  ctx.stroke();
+  // Zombies
+  zombies.forEach(z => {
+    const angle = Math.atan2(player.y - z.y, player.x - z.x);
+    z.x += Math.cos(angle) * z.speed;
+    z.y += Math.sin(angle) * z.speed;
 
-  // BULLETS
-  bullets.forEach((b,i)=>{
-    b.x+=b.dx; b.y+=b.dy;
-    ctx.fillStyle="#fff";
-    ctx.fillRect(b.x,b.y,4,4);
-    zombies.forEach((z,zi)=>{
-      if(Math.hypot(b.x-z.x,b.y-z.y)<z.r){
-        z.health-=damage;
-        bullets.splice(i,1);
-        if(z.health<=0){
-          zombies.splice(zi,1);
-          kills++;
-        }
+    const dist = Math.hypot(player.x - z.x, player.y - z.y);
+    if (dist < player.radius + z.radius) {
+      takeDamage(10);
+    }
+  });
+
+  // Bullet collision
+  bullets.forEach((b, bi) => {
+    zombies.forEach((z, zi) => {
+      const dist = Math.hypot(b.x - z.x, b.y - z.y);
+      if (dist < z.radius) {
+        z.health -= 20;
+        bullets.splice(bi, 1);
+        if (z.health <= 0) zombies.splice(zi, 1);
       }
     });
   });
 
-  // ZOMBIES
-  zombies.forEach(z=>{
-    const a=Math.atan2(player.y-z.y,player.x-z.x);
-    z.x+=Math.cos(a)*z.speed;
-    z.y+=Math.sin(a)*z.speed;
+  // New wave + perk
+  if (zombies.length === 0) {
+    wave++;
+    applyRandomPerk();
+    spawnWave();
+  }
 
-    if(Math.hypot(player.x-z.x,player.y-z.y)<player.r+z.r){
-      if(Date.now()-player.lastHit>800){
-        player.health-=10;
-        player.lastHit=Date.now();
-      }
-    }
+  regenHealth();
+}
 
-    ctx.fillStyle=z.boss?"#8b0000":z.r<18?"#00ff00":"#228b22";
+// ---------------- DRAW ----------------
+function draw() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+  // Player
+  ctx.fillStyle = "tan";
+  ctx.beginPath();
+  ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
+  ctx.fill();
+
+  // Bullets
+  ctx.fillStyle = "yellow";
+  bullets.forEach(b => {
     ctx.beginPath();
-    ctx.arc(z.x,z.y,z.r,0,Math.PI*2);
+    ctx.arc(b.x, b.y, 3, 0, Math.PI * 2);
     ctx.fill();
-
-    ctx.fillStyle="red";
-    ctx.fillRect(z.x-20,z.y-z.r-10,40,5);
-    ctx.fillStyle="lime";
-    ctx.fillRect(z.x-20,z.y-z.r-10,40*(z.health/z.maxHealth),5);
   });
 
-  // REGEN
-  if(Date.now()-player.lastHit>3000 && player.health<player.maxHealth){
-    player.health+=0.1+regenBonus;
-  }
+  // Zombies + health bars
+  zombies.forEach(z => {
+    ctx.fillStyle = "green";
+    ctx.beginPath();
+    ctx.arc(z.x, z.y, z.radius, 0, Math.PI * 2);
+    ctx.fill();
 
-  // UI
-  ctx.fillStyle="white";
-  ctx.font="20px Arial";
-  ctx.fillText("Wave: "+wave,canvas.width-120,30);
-  ctx.fillText("Kills: "+kills,20,30);
+    ctx.fillStyle = "red";
+    ctx.fillRect(z.x - 15, z.y - 25, 30 * (z.health / (40 + wave * 10)), 4);
+  });
 
-  ctx.fillStyle="red";
-  ctx.fillRect(canvas.width/2-100,canvas.height-40,200,15);
-  ctx.fillStyle="lime";
-  ctx.fillRect(canvas.width/2-100,canvas.height-40,200*(player.health/player.maxHealth),15);
+  // Player health bar (bottom middle)
+  ctx.fillStyle = "red";
+  ctx.fillRect(300, 560, 200 * (player.health / player.maxHealth), 10);
 
-  if(zombies.length===0 && !inShop){
-    inShop=true;
-    document.getElementById("shop").style.display="block";
-  }
-
-  requestAnimationFrame(update);
+  // Wave counter (top right)
+  ctx.fillStyle = "white";
+  ctx.font = "16px Arial";
+  ctx.fillText("Wave: " + wave, 700, 20);
 }
+
+// ---------------- LOOP ----------------
+function loop() {
+  update();
+  draw();
+  requestAnimationFrame(loop);
+}
+
+loop();
 </script>
+
 </body>
 </html>
