--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <style>
 body {
   margin:0;
-  background:#111;
+  background:#0b0b0b;
   overflow:hidden;
   font-family: Arial, sans-serif;
 }
 canvas { display:none; }
 
-/* LOADING SCREEN */
-#loading {
+/* MAIN MENU */
+#menu {
   position:fixed;
   inset:0;
-  background:#111;
+  background:radial-gradient(circle, #111, #000);
   display:flex;
   flex-direction:column;
   align-items:center;
@@ -24,90 +24,141 @@ canvas { display:none; }
   color:white;
   z-index:10;
 }
-
-#title {
-  font-size:64px;
-  font-weight:bold;
-  margin-bottom:30px;
+#menu h1 {
+  font-size:72px;
+  letter-spacing:4px;
 }
-
-#bar {
-  width:300px;
-  height:20px;
+.menu-btn {
+  padding:15px 40px;
+  margin:10px;
+  font-size:20px;
+  background:#222;
   border:2px solid white;
+  color:white;
+  cursor:pointer;
 }
-#fill {
-  width:0%;
-  height:100%;
-  background:lime;
-}
+.menu-btn:hover { background:#444; }
 
-#tip {
-  margin-top:20px;
-  opacity:.7;
-}
-
-/* GAME UI */
+/* SHOP */
 #shop {
-  position:absolute;
+  position:fixed;
   inset:0;
-  background:rgba(0,0,0,.85);
+  background:rgba(0,0,0,.9);
+  display:none;
+  color:white;
+  text-align:center;
+}
+#shop h2 { margin-top:60px; }
+
+.perks {
+  display:flex;
+  justify-content:center;
+  gap:20px;
+  margin-top:40px;
+}
+
+.perk {
+  width:200px;
+  padding:20px;
+  border:2px solid white;
+  background:#111;
+  cursor:pointer;
+  position:relative;
+  transition:.2s;
+}
+
+.perk:hover { background:#222; }
+
+.perk.selected {
+  border-color:#00ffea;
+  box-shadow:0 0 15px #00ffea;
+}
+
+.perk small {
+  display:block;
+  margin-top:10px;
+  color:#aaa;
+  font-size:14px;
+}
+
+/* STACK COUNT */
+.stack {
+  position:absolute;
+  top:5px;
+  right:8px;
+  background:#00ffea;
+  color:black;
+  font-size:14px;
+  padding:2px 6px;
+  border-radius:10px;
+}
+
+/* SETTINGS */
+#settings {
+  position:fixed;
+  inset:0;
+  background:#000;
   color:white;
   display:none;
   text-align:center;
   padding-top:100px;
 }
-button { padding:10px 20px; margin:8px; font-size:16px; }
 </style>
 </head>
 <body>
 
-<!-- LOADING SCREEN -->
-<div id="loading">
-  <div id="title">DEADWAVE</div>
-  <div id="bar"><div id="fill"></div></div>
-  <div id="tip">Survive the waves.</div>
+<div id="menu">
+  <h1>DEADWAVE</h1>
+  <p>Click anywhere to start</p>
+  <button class="menu-btn" onclick="startGame()">Play</button>
+  <button class="menu-btn" onclick="openSettings()">Settings</button>
+</div>
+
+<div id="settings">
+  <h2>Settings</h2>
+  <p>Music Volume</p>
+  <input type="range" min="0" max="1" step="0.01" value="0.5" oninput="bgm.volume=this.value">
+  <br><br>
+  <button class="menu-btn" onclick="closeSettings()">Back</button>
+</div>
+
+<div id="shop">
+  <h2>Choose a Perk</h2>
+  <div class="perks">
+    <div class="perk" data-perk="damage" onclick="selectPerk(this)">
+      +1 Damage
+      <small>Bullets deal more damage</small>
+      <div class="stack" id="stack-damage">0</div>
+    </div>
+    <div class="perk" data-perk="regen" onclick="selectPerk(this)">
+      Faster Regen
+      <small>Heal faster when not hit</small>
+      <div class="stack" id="stack-regen">0</div>
+    </div>
+    <div class="perk" data-perk="firerate" onclick="selectPerk(this)">
+      Faster Fire Rate
+      <small>Shoot more often</small>
+      <div class="stack" id="stack-firerate">0</div>
+    </div>
+  </div>
+  <br><br>
+  <button class="menu-btn" onclick="confirmPerk()">Continue</button>
 </div>
 
 <canvas id="game"></canvas>
 
-<div id="shop">
-  <h1>PERK SHOP</h1>
-  <button onclick="perk('damage')">+1 Damage</button>
-  <button onclick="perk('regen')">Faster Regen</button>
-  <button onclick="perk('firerate')">Faster Fire Rate</button>
-  <br><br>
-  <button onclick="nextWave()">Next Wave</button>
-</div>
-
 <script>
-/* ---------- LOADING ---------- */
-let progress = 0;
-const fill = document.getElementById("fill");
-const loading = document.getElementById("loading");
 const canvas = document.getElementById("game");
-
-const loader = setInterval(() => {
-  progress += Math.random() * 10;
-  if (progress >= 100) {
-    progress = 100;
-    clearInterval(loader);
-    loading.style.opacity = "0";
-    setTimeout(() => {
-      loading.style.display = "none";
-      canvas.style.display = "block";
-      startGame();
-    }, 500);
-  }
-  fill.style.width = progress + "%";
-}, 200);
-
-/* ---------- GAME ---------- */
-function startGame() {
 const ctx = canvas.getContext("2d");
 canvas.width = innerWidth;
 canvas.height = innerHeight;
 
+// MUSIC
+const bgm = new Audio("https://cdn.pixabay.com/download/audio/2022/10/25/audio_6b7b2d90b4.mp3");
+bgm.loop = true;
+bgm.volume = 0.5;
+
+// GAME STATE
 const player = {
   x: canvas.width/2,
   y: canvas.height/2,
@@ -121,12 +172,62 @@ const player = {
 let bullets=[], zombies=[], keys={}, mouse={x:0,y:0};
 let wave=1, kills=0, damage=1, regenBonus=0;
 let shootCooldown=500, lastShot=0, inShop=false;
+const mapPadding = 60;
 
+// PERKS
+let selectedPerk = null;
+let perkStacks = { damage:0, regen:0, firerate:0 };
+
+// INPUT
 addEventListener("keydown",e=>keys[e.key.toLowerCase()]=true);
 addEventListener("keyup",e=>keys[e.key.toLowerCase()]=false);
 addEventListener("mousemove",e=>{mouse.x=e.clientX;mouse.y=e.clientY});
 addEventListener("mousedown",shoot);
 
+// MENU
+function startGame(){
+  document.getElementById("menu").style.display="none";
+  canvas.style.display="block";
+  bgm.play();
+  spawnWave();
+  update();
+}
+function openSettings(){
+  document.getElementById("menu").style.display="none";
+  document.getElementById("settings").style.display="block";
+}
+function closeSettings(){
+  document.getElementById("settings").style.display="none";
+  document.getElementById("menu").style.display="flex";
+}
+
+// PERK SELECTION
+function selectPerk(el){
+  document.querySelectorAll(".perk").forEach(p=>p.classList.remove("selected"));
+  el.classList.add("selected");
+  selectedPerk = el.dataset.perk;
+}
+
+function confirmPerk(){
+  if(!selectedPerk) return;
+
+  if(selectedPerk==="damage") damage++;
+  if(selectedPerk==="regen") regenBonus+=0.05;
+  if(selectedPerk==="firerate" && shootCooldown>200) shootCooldown-=50;
+
+  perkStacks[selectedPerk]++;
+  document.getElementById("stack-"+selectedPerk).innerText = perkStacks[selectedPerk];
+
+  selectedPerk=null;
+  document.querySelectorAll(".perk").forEach(p=>p.classList.remove("selected"));
+
+  inShop=false;
+  document.getElementById("shop").style.display="none";
+  wave++;
+  spawnWave();
+}
+
+// SHOOT
 function shoot(){
   if(inShop || Date.now()-lastShot<shootCooldown) return;
   lastShot=Date.now();
@@ -134,6 +235,7 @@ function shoot(){
   bullets.push({x:player.x,y:player.y,dx:Math.cos(a)*10,dy:Math.sin(a)*10});
 }
 
+// ZOMBIES
 function spawnZombie(type){
   let z={x:Math.random()*canvas.width,y:Math.random()*canvas.height};
   if(type==="fast"){z.r=15;z.speed=3;z.health=2;}
@@ -143,35 +245,33 @@ function spawnZombie(type){
   z.maxHealth=z.health;
   zombies.push(z);
 }
-
 function spawnWave(){
   zombies=[];
   for(let i=0;i<wave*2;i++){
-    spawnZombie(Math.random()<.2?"fast":Math.random()<.3?"tank":"normal");
+    spawnZombie(Math.random()<.2?"fast":Math.random()<.35?"tank":"normal");
   }
   if(wave%10===0) spawnZombie("boss");
 }
 
-function perk(p){
-  if(p==="damage") damage++;
-  if(p==="regen") regenBonus+=0.05;
-  if(p==="firerate" && shootCooldown>200) shootCooldown-=50;
-}
-
-function nextWave(){
-  inShop=false;
-  document.getElementById("shop").style.display="none";
-  wave++;
-  spawnWave();
-}
-
+// GAME LOOP
 function update(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  ctx.strokeStyle="#1a1a1a";
+  for(let i=0;i<canvas.width;i+=60){
+    ctx.beginPath(); ctx.moveTo(i,0); ctx.lineTo(i,canvas.height); ctx.stroke();
+  }
+  for(let i=0;i<canvas.height;i+=60){
+    ctx.beginPath(); ctx.moveTo(0,i); ctx.lineTo(canvas.width,i); ctx.stroke();
+  }
 
   if(keys.w) player.y-=player.speed;
   if(keys.s) player.y+=player.speed;
   if(keys.a) player.x-=player.speed;
   if(keys.d) player.x+=player.speed;
+
+  player.x=Math.max(mapPadding,Math.min(canvas.width-mapPadding,player.x));
+  player.y=Math.max(mapPadding,Math.min(canvas.height-mapPadding,player.y));
 
   ctx.fillStyle="#d2b48c";
   ctx.beginPath();
@@ -194,7 +294,10 @@ function update(){
       if(Math.hypot(b.x-z.x,b.y-z.y)<z.r){
         z.health-=damage;
         bullets.splice(i,1);
-        if(z.health<=0){ zombies.splice(zi,1); kills++; }
+        if(z.health<=0){
+          zombies.splice(zi,1);
+          kills++;
+        }
       }
     });
   });
@@ -211,7 +314,7 @@ function update(){
       }
     }
 
-    ctx.fillStyle=z.boss?"#8b0000":"#228b22";
+    ctx.fillStyle=z.boss?"#8b0000":z.r<18?"#00ff00":"#228b22";
     ctx.beginPath();
     ctx.arc(z.x,z.y,z.r,0,Math.PI*2);
     ctx.fill();
@@ -226,16 +329,17 @@ function update(){
   ctx.fillText("Wave: "+wave,canvas.width-120,30);
   ctx.fillText("Kills: "+kills,20,30);
 
+  ctx.fillStyle="red";
+  ctx.fillRect(canvas.width/2-100,canvas.height-40,200,15);
+  ctx.fillStyle="lime";
+  ctx.fillRect(canvas.width/2-100,canvas.height-40,200*(player.health/player.maxHealth),15);
+
   if(zombies.length===0 && !inShop){
     inShop=true;
     document.getElementById("shop").style.display="block";
   }
 
   requestAnimationFrame(update);
-}
-
-spawnWave();
-update();
 }
 </script>
 </body>
